# SPARC

./: CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
demo/: run_demo.py
demo/data/: README.md  metadata.json  scmultisim_demo.h5ad  scmultisim_demo_gold.npz
demo/results/: README.md  dynamic_grn.npz  dynamic_grn_edge_summary.csv  global_grn.csv  run_summary.json  top_global_edges.csv
scripts/: prepare_demo_data.py
src/sparc/: __init__.py  _constants.py  _model.py  _module.py
